Popover tables are now scrollable to avoid overflow

--- a/angular-src/src/styles.css
+++ b/angular-src/src/styles.css
@@ -146,3 +146,8 @@
 .bg-purple{
     background-color: #b399ff;
 }
+
+.popTable{
+    max-height: 400px !important;
+    overflow: scroll;
+}
